support for multiple buckets with keepalive pool

--- a/t/cb.conf
+++ b/t/cb.conf
@@ -7,6 +7,13 @@ server {
       ngx.say(cjson.encode(cb.set(ngx.var.arg_key, ngx.var.arg_value)))
     }
   }
+  location /set2 {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.set2(ngx.var.arg_key, ngx.var.arg_value)))
+    }
+  }
   location /get {
     content_by_lua_block {
       local cb = require "cb"
@@ -54,6 +61,20 @@ server {
       local cb = require "cb"
       local cjson = require "cjson"
       ngx.say(cjson.encode(cb.decr(ngx.var.arg_key)))
+    }
+  }
+  location /sasl_list {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.sasl_list()))
+    }
+  }
+  location /list_buckets {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.list_buckets()))
     }
   }
 }
