--- a/t/cb.conf
+++ b/t/cb.conf
@@ -8,6 +8,13 @@ server {
       ngx.say(cjson.encode(cb.set(ngx.var.arg_key, ngx.var.arg_value)))
     }
   }
+  location /set_perf {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.set_perf(ngx.var.arg_key, ngx.var.arg_value)))
+    }
+  }
   location /set2 {
     content_by_lua_block {
       local cb = require "cb"
@@ -15,11 +22,32 @@ server {
       ngx.say(cjson.encode(cb.set2(ngx.var.arg_key, ngx.var.arg_value)))
     }
   }
+  location /replace {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.replace(ngx.var.arg_key, ngx.var.arg_value)))
+    }
+  }
+  location /touch {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.touch(ngx.var.arg_key, ngx.var.arg_expire)))
+    }
+  }
   location /get {
     content_by_lua_block {
       local cb = require "cb"
       local cjson = require "cjson"
       ngx.say(cjson.encode(cb.get(ngx.var.arg_key)))
+    }
+  }
+  location /delete {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.delete(ngx.var.arg_key)))
     }
   }
   location /gat {
@@ -76,6 +104,20 @@ server {
       local cb = require "cb"
       local cjson = require "cjson"
       ngx.say(cjson.encode(cb.list_buckets()))
+    }
+  }
+  location /noop {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.noop()))
+    }
+  }
+  location /flush {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.flush()))
     }
   }
 }
