doc & small refactor

--- a/t/cb.conf
+++ b/t/cb.conf
@@ -43,6 +43,13 @@ server {
       ngx.say(cjson.encode(cb.get(ngx.var.arg_key)))
     }
   }
+  location /get2 {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.get2(ngx.var.arg_key)))
+    }
+  }
   location /delete {
     content_by_lua_block {
       local cb = require "cb"
