small refactor error handling

--- a/t/cb.conf
+++ b/t/cb.conf
@@ -15,6 +15,13 @@ server {
       ngx.say(cjson.encode(cb.set_perf(ngx.var.arg_key, ngx.var.arg_value)))
     }
   }
+  location /get_perf {
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      ngx.say(cjson.encode(cb.get_perf(ngx.var.arg_key)))
+    }
+  }
   location /set2 {
     content_by_lua_block {
       local cb = require "cb"
