--- a/t/cb.conf
+++ b/t/cb.conf
@@ -134,4 +134,20 @@ server {
       ngx.say(cjson.encode(cb.flush()))
     }
   }
+  location /batch {
+    lua_need_request_body on;
+    content_by_lua_block {
+      local cb = require "cb"
+      local cjson = require "cjson"
+      local body = cjson.decode(ngx.req.get_body_data())
+      cb.batch(body)
+      ngx.say(cjson.encode(body))
+    }
+  }
+  location /batch_gen {
+    content_by_lua_block {
+      local cb = require "cb"
+      ngx.say(cb.batch_gen(ngx.var.arg_n))
+    }
+  }
 }
