restore Q versions in README

--- a/t/cb.conf
+++ b/t/cb.conf
@@ -150,4 +150,10 @@ server {
       ngx.say(cb.batch_gen(ngx.var.arg_n))
     }
   }
+  location /batch_genQ {
+    content_by_lua_block {
+      local cb = require "cb"
+      ngx.say(cb.batch_gen(ngx.var.arg_n))
+    }
+  }
 }
